Trying out java 9 modules in latest eclipse